k8s/06-translator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translator
  template:
    metadata:
      labels:
        app: translator
    spec:
      containers:
      - name: translator
        image: libretranslate/libretranslate:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 5000
       
apiVersion: v1
kind: Service
metadata:
  name: translator-service
spec:
  selector:
    app: translator
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
